; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpnserv/extr_validate.c_GetBuiltinAdminGroupName.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpnserv/extr_validate.c_GetBuiltinAdminGroupName.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i64 0, align 8
@SECURITY_MAX_SID_SIZE = common dso_local global i32 0, align 4
@MAX_NAME = common dso_local global i32 0, align 4
@WinBuiltinAdministratorsSid = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i32)* @GetBuiltinAdminGroupName to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @GetBuiltinAdminGroupName(i32* %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %14 = load i64, i64* @FALSE, align 8
  store i64 %14, i64* %6, align 8
  store i32* null, i32** %7, align 8
  %15 = load i32, i32* @SECURITY_MAX_SID_SIZE, align 4
  store i32 %15, i32* %8, align 4
  %16 = load i32, i32* @MAX_NAME, align 4
  %17 = zext i32 %16 to i64
  %18 = call i8* @llvm.stacksave()
  store i8* %18, i8** %10, align 8
  %19 = alloca i32, i64 %17, align 16
  store i64 %17, i64* %11, align 8
  %20 = call i32 @_countof(i32* %19)
  store i32 %20, i32* %12, align 4
  %21 = load i32, i32* %8, align 4
  %22 = call i32* @malloc(i32 %21)
  store i32* %22, i32** %7, align 8
  %23 = load i32*, i32** %7, align 8
  %24 = icmp ne i32* %23, null
  br i1 %24, label %27, label %25

25:                                               ; preds = %2
  %26 = load i64, i64* @FALSE, align 8
  store i64 %26, i64* %3, align 8
  store i32 1, i32* %13, align 4
  br label %41

27:                                               ; preds = %2
  %28 = load i32, i32* @WinBuiltinAdministratorsSid, align 4
  %29 = load i32*, i32** %7, align 8
  %30 = call i64 @CreateWellKnownSid(i32 %28, i32* null, i32* %29, i32* %8)
  store i64 %30, i64* %6, align 8
  %31 = load i64, i64* %6, align 8
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %37

33:                                               ; preds = %27
  %34 = load i32*, i32** %7, align 8
  %35 = load i32*, i32** %4, align 8
  %36 = call i64 @LookupAccountSidW(i32* null, i32* %34, i32* %35, i32* %5, i32* %19, i32* %12, i32* %9)
  store i64 %36, i64* %6, align 8
  br label %37

37:                                               ; preds = %33, %27
  %38 = load i32*, i32** %7, align 8
  %39 = call i32 @free(i32* %38)
  %40 = load i64, i64* %6, align 8
  store i64 %40, i64* %3, align 8
  store i32 1, i32* %13, align 4
  br label %41

41:                                               ; preds = %37, %25
  %42 = load i8*, i8** %10, align 8
  call void @llvm.stackrestore(i8* %42)
  %43 = load i64, i64* %3, align 8
  ret i64 %43
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @_countof(i32*) #2

declare dso_local i32* @malloc(i32) #2

declare dso_local i64 @CreateWellKnownSid(i32, i32*, i32*, i32*) #2

declare dso_local i64 @LookupAccountSidW(i32*, i32*, i32*, i32*, i32*, i32*, i32*) #2

declare dso_local i32 @free(i32*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
